# fronts-toolbox

./: .gitignore  .readthedocs.yml  .readtheyocs.yml  README.md  changelog.md  pyproject.toml
doc/: Makefile  api.rst  conf.py  dev-guide.rst  index.rst  requirements.txt
doc/_templates/autosummary/: module.rst
doc/algorithms/: boa.rst  canny.rst  cayula-cornillon.rst  contextual-median.rst  heterogeneity-index.rst  index.rst
doc/filters/: index.rst
docs/: api.rst  conf.py  dev-guide.rst  index.rst
docs/algorithms/: boa.rst  canny.rst  cayula-cornillon.rst  contextual-median.rst  heterogeneity-index.rst  index.rst  median.rst
docs/gallery/: boa.ipynb  canny.ipynb  cayula-cornillon.ipynb  contextual-median.ipynb  heterogeneity-index.ipynb  index.rst  median-filter.ipynb
src/fronts_toolbox/: _fields.py  canny.py  cayula_cornillon.py  heterogeneity_index.py  util.py
src/fronts_toolbox/benchmarks/: boa.py  canny.py  cayula_cornillon.py  contextual_median.py  fields.py  heterogeneity_index.py  real_fields.py
src/fronts_toolbox/filters/: __init__.py  boa.py  contextual_median.py  median.py
src/fronts_toolbox/heterogeneity_index/: components.py  normalization.py
tests/: conftest.py  core.py  test_canny.py  test_cayula_cornillon.py  test_heterogeneity_index.py
